[package]
name = "cmd"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"
publish = false
default-run = "edb-server"

[features]
tcmalloc = ["edb/tcmalloc"]
jemalloc = ["edb/jemalloc"]
mimalloc = ["edb/mimalloc"]
porBlock = ["edb/porBlock"]
sse = ["edb/sse"]
mem-profiling = ["edb/mem-profiling"]
failpoints = ["edb/failpoints"]
protobuf-codec = [
  "backup/protobuf-codec",
  "grpcio/protobuf-codec",
  "tuplespaceInstanton/protobuf-codec",
  "ekvproto/protobuf-codec",
  "fidel_client/protobuf-codec",
  "violetabft/protobuf-codec",
  "violetabftstore/protobuf-codec",
  "edb/protobuf-codec",
  "txn_types/protobuf-codec",
  "causet_context/protobuf-codec",
  "violetabft_log_engine/protobuf-codec"
]
prost-codec = [
  "backup/prost-codec",
  "grpcio/prost-codec",
  "tuplespaceInstanton/prost-codec",
  "ekvproto/prost-codec",
  "fidel_client/prost-codec",
  "violetabft/prost-codec",
  "violetabftstore/prost-codec",
  "edb/prost-codec",
  "txn_types/prost-codec",
  "causet_context/prost-codec",
  "violetabft_log_engine/prost-codec"
]

[lib]
name = "cmd"

[[bin]]
name = "edb-server"

[[bin]]
name = "edb-ctl"

[dependencies]
backup = { path = "../components/backup", default-features = false }
causet_context = { path = "../components/causet_context" }
chrono = "0.4"
clap = "2.32"
interlocking_directorate = { path = "../components/interlocking_directorate" }
encryption = { path = "../components/encryption" }
engine_lmdb = { path = "../components/engine_lmdb" }
edb = { path = "../components/edb" }
error_code = { path = "../components/error_code" }
fs2 = "0.4"
futures = "0.3"
tokio = { version = "0.2", features = ["rt-threaded"] }
grpcio = { version = "0.6", default-features = false, features = ["openssl-vlightlikeored"] }
hex = "0.4"
tuplespaceInstanton = { path = "../components/tuplespaceInstanton" }
ekvproto = { git = "https://github.com/whtcorpsinc/ekvproto.git", default-features = false }
libc = "0.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
nix = "0.11"
fidel_client = { path = "../components/fidel_client" }
prometheus = { version = "0.8", features = ["nightly", "push"] }
promptly = "0.3.0"
protobuf = "2.8"
violetabft = { version = "0.6.0-alpha", default-features = false }
violetabft_log_engine = { path = "../components/violetabft_log_engine" }
violetabftstore = { path = "../components/violetabftstore" }
rand = "0.7"
security = { path = "../components/security" }
serde_json = "1.0"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
edb = { path = "../", default-features = false }
edb_alloc = { path = "../components/edb_alloc" }
violetabftstore::interlock:: = { path = "../components/violetabftstore::interlock::" }
toml = "0.4"
txn_types = { path = "../components/txn_types" }
vlog = "0.1.4"

[dependencies.yatp]
git = "https://github.com/edb/yatp.git"

[target.'causet(unix)'.dependencies]
signal = "0.6"
