[package]
name = "codec"
version = "0.0.1"
edition = "2018"
publish = false

[deplightlikeencies]
byteorder = "1.2"
error_code = { path = "../error_code" }
failure = "0.1"
libc = "0.2"
static_assertions = { version = "1.0", features = ["nightly"] }
einsteindb_alloc = { path = "../einsteindb_alloc" }

[dev-deplightlikeencies]
panic_hook = { path = "../panic_hook" }
protobuf = "2"
bytes = "0.4.10"
rand = "0.7"
