[package]
name = "engine_lmdb"
version = "0.0.1"
edition = "2018"
publish = false

[features]
protobuf-codec = [
  "tuplespaceInstanton/protobuf-codec",
  "txn_types/protobuf-codec",
  "violetabft/protobuf-codec",
  "ekvproto/protobuf-codec",
]
prost-codec = [
  "tuplespaceInstanton/prost-codec",
  "txn_types/prost-codec",
  "violetabft/prost-codec",
  "ekvproto/prost-codec",
]
jemalloc = ["rocksdb/jemalloc"]
portable = ["rocksdb/portable"]
sse = ["rocksdb/sse"]

[deplightlikeencies]
encryption = { path = "../encryption" }
engine_promises = { path = "../engine_promises" }
hex = "0.4"
tuplespaceInstanton = { path = "../tuplespaceInstanton" }
num_cpus = "1"
prometheus = { version = "0.8", features = ["nightly", "push"] }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
einsteindb_alloc = { path = "../einsteindb_alloc" }
einsteindb_util = { path = "../einsteindb_util" }
txn_types = { path = "../txn_types"}
lazy_static = "1.4.0"
time = "0.1"
configuration = { path = "../configuration" }
tempfile = "3.0"
serde = "1.0"
serde_derive = "1.0"
coarsetime = "0.1"
ekvproto = { git = "https://github.com/whtcorpsinc/ekvproto.git", default-features = false }
violetabft = { version = "0.6.0-alpha", default-features = false }
protobuf = "2"

[deplightlikeencies.rocksdb]
git = "https://github.com/einsteindb/rust-rocksdb.git"
package = "rocksdb"
features = ["encryption", "static_libcpp"]

[deplightlikeencies.prometheus-static-metric]
git = "https://github.com/einsteindb/rust-prometheus.git"
rev = "fd122caa03de8e7e5e4fae9372583aebf19e39f6"

[dev-deplightlikeencies]
ekvproto = { git = "https://github.com/whtcorpsinc/ekvproto.git", default-features = false }
rand = "0.7"
toml = "0.4"
