[package]
name = "engine_panic"
version = "0.0.1"
description = "An example EinsteinDB persistence engine that does nothing but panic"
edition = "2018"
publish = false

[deplightlikeencies]
engine_promises = { path = "../engine_promises" }
einsteindb_alloc = { path = "../einsteindb_alloc" }
# FIXME: Remove this dep from the engine_promises interface
einsteindb_util = { path = "../einsteindb_util" }
