[package]
name = "into_other"
version = "0.0.1"
edition = "2018"
publish = false

[features]
protobuf-codec = ["ekvproto/protobuf-codec", "violetabft/protobuf-codec"]
prost-codec = ["ekvproto/prost-codec", "violetabft/prost-codec"]

[deplightlikeencies]
engine_promises = { path = "../engine_promises" }
ekvproto = { git = "https://github.com/whtcorpsinc/ekvproto.git", default-features = false }
violetabft = { version = "0.6.0-alpha", default-features = false }
