[package]
name = "edb_promises"
version = "0.0.1"
workspace = ".."

[lib]
name = "allegrosql_promises"
path = "lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
enum-set = "0.0.8"
indexmap = "1"
ordered-float = { version = "2.0.1", features = ["serde"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
serde = { version = "1.0.1", features = ["rc"] }
serde_derive = "1.0"

[dependencies.edbn]
path = "../edbn"
features = ["serde_support"]
