[package]
name = "einsteindb-prod_embedded"
version = "0.0.1"
workspace = ".."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
enum-set = "0.0.7"
failure = "0.1.1"
indexmap = "1"
ordered-float = { version = "0.5", features = ["serde"] }
uuid = { version = "0.5", features = ["v4", "serde"] }

[dependencies.embedded_promises]
path = "../embedded-promises"

[dependencies.edbn]
path = "../edbn"
features = ["serde_support"]
