[package]
name = "fuzzer-afl"
version = "0.0.1"
publish = false

[features]
default = ["protobuf-codec"]
protobuf-codec = ["fuzz-targets/protobuf-codec"]
prost-codec = ["fuzz-targets/prost-codec"]

[deplightlikeencies]
fuzz-targets = { path = "../targets", default-features = false }

# AFL only works for x86 targets
[target.'causetg(target_arch = "x86_64")'.deplightlikeencies]
afl = "0.6"
