[package]
name = "client_util"
version = "0.1.0"
authors = ["Karl Whitford Josh Leder Spencer Fogelman <karl@einst.ai>"]
description = "Immutable Producer"
edition = "2021"

[dependencies]
bytes = "1.0"
chrono = "0.4"
interlock_dir_protocol = { path = "../interlocking_directorate" }
num_cpus = "1.13.0"
observability_deps = { path = "../observability_deps" }
percent-encoding = "2.1.0"
regex = "1.4"
snafu = "0.6"
time = { path = "../time" }
uuid = { version = "0.8", features = ["v4"] }

http = "0.2.3"
prost = "0.9.0"
thiserror = "1.0.30"
tonic = { version = "0.6.1" }
tower = "0.4"

[dev-dependencies]
tokio = { version = "1.13", features = ["macros"] }